# sms-sender

./: .gitignore  README.md  build.py  pyproject.toml
android/sms_companion/: settings.gradle
android/sms_companion/app/: build.gradle
android/sms_companion/app/src/main/: AndroidManifest.xml
android/sms_companion/app/src/main/java/com/smsauto/companion/: MainActivity.java  SmsCommandReceiver.java  SmsDispatcher.java  SmsStatusReceiver.java  StatusStore.java
android/sms_companion/app/src/main/res/values/: strings.xml  styles.xml
assets/: README.txt
doc/: @architecture_decisions.md  @backlog.md  @changelog.md  @conventions.md  @product_idea.md  @tasklist.md  @vision.md  @workflow.md
scripts/: fetch_adb.py
src/: app.py  main.py
src/adb/: companion.py  device_manager.py  sms_sender.py  status_reader.py
src/core/: excel_loader.py  message_builder.py  models.py  report_exporter.py  send_queue.py  template_store.py
src/ui/: __init__.py  screen_builder.py  screen_import.py  screen_sending.py  screen_settings.py
tests/: conftest.py  test_app_icon.py  test_build.py  test_companion.py  test_device_manager.py  test_excel_loader.py  test_message_builder.py  test_report_exporter.py  test_screen_builder.py  test_screen_import.py  test_screen_sending.py  test_screen_settings.py  test_send_queue.py  test_sms_sender.py  test_status_reader.py  test_template_store.py
tests/fixtures/: test_contacts.xlsx
