[project]
name = "sms-auto"
version = "0.1.0"
description = "Десктопный инструмент для авто-рассылки SMS через ADB"
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5.2.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
sms-auto = "main:main"
sms-auto-install-companion = "adb.sms_sender:install_and_open_companion"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pyinstaller>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle + pyflakes + isort

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
